@@ -8,6 +8,9 @@
 \hyperlink{number_properties}{number\_properties} - determine floating-point parameters \\
 \hyperlink{frexp}{frexp} - dissect floating-point numbers into base 2 exponent and mantissa\\
 \hyperlink{isreal}{isreal} - check if a variable has real or complex entries\\
+\hyperlink{complex}{complex} - build complex numbers from real and imaginary parts\\
+\hyperlink{real}{real} - extract real part of a complex scalar, vector or matrix\\
+\hyperlink{imag}{imag} - extract imaginary part of a complex scalar, vector or matrix\\
 \hyperlink{isfinite}{isfinite} - check for "Finite" entries \\
 \hyperlink{isnan}{isnan} - check for "NaN'' entries \\
 \hyperlink{isnan}{isinf} - check for "Infinite entries \\
@@ -22,6 +25,7 @@
 \input numbers/number_properties.tex
 \input numbers/frexp.tex
 \input numbers/isreal.tex 
+\input numbers/complex.tex 
 \input numbers/isnan.tex 
 \input numbers/nearfloat.tex 
 \input numbers/primes.tex 
