@@ -282,6 +282,7 @@ extern int nsp_mat_tgamma(NspMatrix *A);
 
 extern int nsp_mat_arg(NspMatrix *A); 
 extern int nsp_mat_polar(NspMatrix *A, NspMatrix *B); 
+extern NspMatrix *nsp_mat_complex(NspMatrix *A, NspMatrix *B);
 extern int nsp_mat_nearfloat(int dir, NspMatrix *x);
 extern int nsp_mat_iand(NspMatrix *A, NspMatrix *B); 
 extern int nsp_mat_iandu(NspMatrix *A, unsigned int *res); 
